--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,8 @@
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
 .margin-top {
     @include modifier("sm") {
         margin-top: $space-sm;
